UtahLiveDataTest/src/objects/FINETProgram__c.object
<CustomObject>
    <description>This is the object for the FINET program creation</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appr__c</fullName>
        <label>Appr</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test1</fullName>
                </value>
                <value>
                    <fullName>Test2</fullName>
                </value>
                <value>
                    <fullName>Test3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutoGenerate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Generate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingAgreementDate__c</fullName>
        <label>Billing Agreement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BoardEntity__c</fullName>
        <label>Board Entity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budgeting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budgeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BuildingNumber__c</fullName>
        <label>Building Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corridor__c</fullName>
        <label>Corridor</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beaver County</fullName>
                </value>
                <value>
                    <fullName>Box Elder County</fullName>
                </value>
                <value>
                    <fullName>Cache County</fullName>
                </value>
                <value>
                    <fullName>Carbon County</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the internal account</description>
        <label>Department</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>FINETPrograms</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EffectiveFrom__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EffectiveTo__c</fullName>
        <label>Effective To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINETMajorProgram__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>FINET Major Program</label>
        <referenceTo>r_mjr_prog__c</referenceTo>
        <relationshipName>FINETPrograms</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINETProgramCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FINET Program Category</label>
        <referenceTo>r_pcat__c</referenceTo>
        <relationshipName>FINETPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINETProgramClass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FINET Program Class</label>
        <referenceTo>r_pcls__c</referenceTo>
        <relationshipName>FINETPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINETProgramGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FINET Program Group</label>
        <referenceTo>r_pgrp__c</referenceTo>
        <relationshipName>FINETPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINETProgramType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FINET Program Type</label>
        <referenceTo>r_ptype__c</referenceTo>
        <relationshipName>FINETPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FederalAidProjectNumber__c</fullName>
        <label>Federal Aid Project Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiscalApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FiscalApprover</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FINETPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <label>Fund</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HideEditDeleteBtn__c</fullName>
        <formula>AND((TEXT(Status__c) != &apos;Created&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Edit Delete Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HighwayFunctionalClass__c</fullName>
        <label>Highway Functional Class</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndianReservation__c</fullName>
        <label>Indian Reservation</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegislativeEntity__c</fullName>
        <label>Legislative Entity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MilePostEnd__c</fullName>
        <label>Mile Post End</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MilePostStart__c</fullName>
        <label>Mile Post Start</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROG_SH_NM__c</fullName>
        <label>Short Name</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParcelNumber__c</fullName>
        <label>Parcel Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <label>Prefix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProgramApprover</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FINETPrograms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramCode__c</fullName>
        <label>Program Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramName__c</fullName>
        <label>ProgramName</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectAgreementNumber__c</fullName>
        <label>Project Agreement Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReclassExclusion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reclass Exclusion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReimbEligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reimb Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReimbStatus__c</fullName>
        <label>Reimb Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Allowed for Reimbursement</fullName>
                </value>
                <value>
                    <fullName>Suspended for Reimbursement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecondaryRoadPlan__c</fullName>
        <label>Secondary Road Plan</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteLocation__c</fullName>
        <label>Site Location</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <label>Station</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubAccount__c</fullName>
        <label>Sub Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkDescription__c</fullName>
        <label>Work Description</label>
        <type>TextArea</type>
    </fields>
    <label>FINET Program</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FINETProgram Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FINET Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>